[package]
name = "doudou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
